--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: Themenew
 Author: Saeed Shahab
 Github Theme URI: https://github.com/saeedshahab/themenew
 Template: twentyeleven
-Version: 1.0
+Version: 1.1
 Description: A theme to demo a plugin.
 */
 
@@ -13,3 +13,4 @@ Description: A theme to demo a plugin.
 html, body { background:#383434; }
 
 /* First Release 1.0 */
+/* Update to 1.1 */
